samples/errors/strings.our
main()
{
write("Hello!");
}

/*
Strings are not supported.  Line: 3
*/